@@ -3,6 +3,7 @@ Changes for 3.4.12rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-12380] improved function parameter parsing for trigger functions (MVekslers)
 ..F....... [ZBX-13641] disabled preprocessing update for discovered items (vasilijs)
 A......... [ZBX-13732] fixed status change for linked template items through parent template if host assigned (agriscenko)
 ..F....... [ZBX-14432] removed redundant code and improved performance in event details screen (miks)
@@ -1285,6 +1286,7 @@ Changes for 3.0.20rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-12380] improved function parameter parsing for trigger functions (MVekslers)
 ..F....... [ZBX-14432] removed redundant code in event details screen (miks)
 ........S. [ZBX-14410] improved error message handling in zbx_function_find() (MVekslers)
 ..F....... [ZBX-12104] added limit ZBX_HISTORY_PERIOD for {ITEM.VALUE} macro resolving in trigger name (gcalenko)
